# AudioVisualiser

./: .gitignore  AudioVizualizer.cpp  AudioVizualizer.sln  AudioVizualizer.vcxproj  AudioVizualizer.vcxproj.filters  Buttons.cpp  Buttons.h  CMakeLists.txt  Menu.cpp  Menu.h  Menu_view.cpp  Modes.cpp  Modes.h  READEME.md  README.md  Reader.cpp  Reader.h  SongDatabase.cpp  SongDatabase.h  SoundProcessor.cpp  SoundProcessor.h  UGI.cpp  UGI.h  Vizualizer.cpp  Vizualizer.h
.github/: dependabot.yml
.github/workflows/: linux.yml
Code/Headerss/: Menu.h  Modes.h  SongDatabase.h  SoundProcessor.h  Vizualizer.h
Code/Source Code/: AudioVizualizer.cpp  Buttons.cpp  Menu.cpp  Modes.cpp  SongDatabase.cpp  Vizualizer.cpp
Documentation/html/: _menu_8h_source.html  _modes_8h_source.html  _song_database_8h_source.html  _sound_processor_8h_source.html  _vizualizer_8h_source.html  annotated.html  class_abstract_button-members.html  class_abstract_button.html  class_abstract_mode-members.html  class_abstract_mode.html  class_add_song_button-members.html  class_add_song_button.html  class_amplitude-members.html  class_amplitude.html  class_back_button-members.html  class_back_button.html  class_graphics-members.html  class_graphics.html  class_increment_button-members.html  class_increment_button.html  class_map-members.html  class_map.html  class_menu-members.html  class_menu.html  class_mode_button-members.html  class_mode_button.html  class_play_button-members.html  class_play_button.html  class_plus_button-members.html  class_plus_button.html  class_radio-members.html  (+40 more)
(+62 files in other folders)
